@@ -1,5 +1,5 @@
 <?php
-// $Id: common.inc,v 1.636 2007/04/27 07:42:54 dries Exp $
+// $Id: common.inc,v 1.637 2007/04/30 11:12:35 dries Exp $
 
 /**
  * @file
@@ -2615,4 +2615,23 @@ function drupal_parse_info_file($filename) {
   }
 
   return $info;
+}
+
+/**
+ * @return
+ *   Array of the possible severity levels for log messages.
+ *
+ * @see watchdog
+ */
+function watchdog_severity_levels() {
+  return array(
+    WATCHDOG_EMERG    => t('emergency'),
+    WATCHDOG_ALERT    => t('alert'),
+    WATCHDOG_CRITICAL => t('critical'),
+    WATCHDOG_ERROR    => t('error'),
+    WATCHDOG_WARNING  => t('warning'),
+    WATCHDOG_NOTICE   => t('notice'),
+    WATCHDOG_INFO     => t('info'),
+    WATCHDOG_DEBUG    => t('debug'),
+  );
 }
