@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.190 2007/04/25 21:36:57 dries Exp $
+// $Id: CHANGELOG.txt,v 1.191 2007/04/30 11:12:35 dries Exp $
 
 Drupal 6.0, xxxx-xx-xx (development version)
 ----------------------
@@ -6,7 +6,8 @@ Drupal 6.0, xxxx-xx-xx (development version)
    * New hook_watchdog that can be implemented by any module to route log messages to various destinations.
    * Expands the severity levels from 3 (Error, Warning, Notice) to the 8 levels defined in RFC 3164.
    * The watchdog module is now called dblog, and is optional, but enabled by default in the default install profile.
-   * New optional syslog.module now in core.
+   * Extended the database log module so log messages can be filtered.
+   * Added syslog module: useful for monitoring large Drupal installations.
 - Added theme registry: modules can directly provide .tpl.php files for their themes without having to create theme_ functions.
 - Added versioning support to node terms.
 - Made it easier to theme the forum overview page.
